--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.url = jdbc:mysql://localhost:3306/jee?createDatabaseIfNotExist
 spring.datasource.username = root
 spring.datasource.password = 
 spring.datasource.platform = mysql
-spring.datasource.initialization-mode = always
+spring.sql.init.mode = always
 
 spring.jpa.properties.hibernate.hbm2ddl.auto = update
 
